[package]
name = "dicksword"
version = "0.1.0"
authors = ["Replit user <replituser@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.2.5"
rusqlite = "0.24.2"