[package]
name = "dicksword"
version = "0.1.0"
authors = ["Replit user <replituser@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.2.5"
serde = {version = "1.0", features = ["derive"] }
#serde_derive = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite"] }
serde_json = "1.0"
thiserror = "1.0"
rust-argon2 = "0.8.3"
rand = "0.8.3"
log = "0.4"
jsonwebtoken = "7.2.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.0"